<resources>

    <string name="facebook_app_id">1182783598544577</string>
    <string name="fb_login_protocol_scheme">fb1182783598544577</string>
    <string name="app_name">Imamia Jantri Official</string>
    <string name="imamia_jantri_logo">Imamia Jantri Logo</string>
    <string name="account">Account</string>
    <string name="register">Register</string>
    <string name="signup">Sign up</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_agree_to_the">I Agree to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="imamia_jantri">Imamia Jantri</string>
    <string name="qibla_direction">Qibla Direction</string>
    <string name="quran">Quran</string>
    <string name="dua_s">Duas</string>
    <string name="phone_no">03XXXXXXXXX</string>
    <string name="logout">Logout</string>
    <string name="imamia_jatri_2019">Imamia Jantri \n 2019</string>
    <string name="search">Search Page No.</string>
    <string name="previous">Previous</string>
    <string name="table_of_content">Table Of Content</string>
    <string name="next">Next</string>
    <string name="share_icon">Share Icon</string>
    <string name="zoom_in_out">Zoom In/Out</string>
    <string name="_0">0°</string>
    <string name="compass">Compass</string>
    <string name="needle">needle</string>
    <string name="prev_btn">Previous</string>
    <string name="next_btn">Next</string>
    <string name="finish_btn">Finish</string>
    <string name="nextNamaz">______</string>
    <string name="difference">00:00:00</string>
    <string name="Namaztime">00:00</string>
    <string name="aboutus_content">Imamia Jantri 2019 is the most famous Muslim Jantri used by Sunni and Shia Communities in Sub continent and all over the world published by Iftikhar Book Depot.

In the Imamia Jantri you will find answers (predictions) of all your astrological questions in Urdu language regarding your zodiac and what the year 2019 behold.</string>
    <string name="today_date">Date</string>
    <string name="share">Share</string>
    <string name="calendar">Calendar</string>
    <string name="allPrayers">All Prayer Time</string>
    <string name="prayerLog">Prayer Log</string>
    <string name="Namaz">Namaz</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="sunrise">Sunrise</string>
    <string name="imsak">Imsak</string>
    <string name="prayertimesinyourcity">Prayer Times in</string>
    <string name="city_name">City</string>
    <string name="error_network_timeout">Please check your internet connection.</string>
    <string name="error_network">An error occurred. Please try again later.</string>
    <string name="name">Name</string>

    <string-array name="header_titles">

        <item> Sleeping</item>
        <item> Toilet</item>
        <item> Mosque</item>

    </string-array>

    <string-array name="h1">

        <item>Before Sleeping</item>
        <item>When You Wake up</item>

    </string-array>

    <string-array name="h2">

        <item>Before entereing toilet</item>
        <item>After leaving toilet</item>

    </string-array>

    <string-array name="h3">

        <item>When going to the mosque</item>
        <item>Upon entering Mosque</item>
        <item>Upon leaving Mosque</item>

    </string-array>

    <string-array name="sleeping_dua">

        <item>اللَّهُمَّ بِاسْـمِكَ أَمُوتُ وَأَحْيَا</item>
        <item>الحَمْدُ لِلهِ الَّذِي أَحْيَانَا بَعْدَ مَا أَمَاتَنَا وَإِلَيْهِ النُّشُورُ</item>

    </string-array>

    <string-array name="sleeping_dua_english">

        <item>In Your name O Allah, I live and die.</item>
        <item>All praise is for Allah who gave us life after causing us to die, and unto Him is the resurrection.</item>

    </string-array>

    <string-array name="toilet_dua">

        <item>اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنَ الْخُبُثِ وَالْخَبَائِثِ</item>
        <item>غُفْرَانَكَ اَلْحَمْدُ لِللَّهِ الَّذِيْ أَذْهَبَ عَنِّيْ الأَذّىَ وَ عَافَانِيْ</item>

    </string-array>

    <string-array name="toilet_dua_english">

        <item>O Allah, I seek refuge with you from all evil and evil-doers.</item>
        <item>O Allah. I seek your forgiveness. All praises are due to Allah who has taken away from me the discomfort and granted me comfort.</item>

    </string-array>

    <string-array name="dua_mosque">

        <item>اللّهُـمَّ اجْعَـلْ في قَلْبـي نورا ، وَفي لِسـاني نورا، وَاجْعَـلْ في سَمْعي نورا، وَاجْعَـلْ في بَصَري نورا، وَاجْعَـلْ مِنْ خَلْفي نورا، وَمِنْ أَمامـي نورا، وَاجْعَـلْ مِنْ فَوْقـي نورا ، وَمِن تَحْتـي نورا .اللّهُـمَّ أَعْطِنـي نور</item>
        <item>اللَّهُمَّ افْتَحْ لِي أَبْوَابَ رَحْمَتِكَ</item>
        <item>السَّلامُ عَلَى رَسُولِ اللهِ، اللَّهُمَّ إِنِّي أَسْأَلُكَ مِنْ فَضْلِكَ</item>

    </string-array>

    <string-array name="dua_mosque_english">

        <item>O Allah, place within my heart light, and upon my tongue light, and within my ears light, and within my eyes light, and place behind me light and in front of me light and above me light and beneath me light. O Allah, bestow upon me light.</item>
        <item>O Allah, open the gates of Your mercy for me.</item>
        <item>Peace be upon the Messenger of Allah. O Allah, I ask You from Your favour.</item>

    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="gregorian">Gregorian</string>
    <string name="hijri">Hijri</string>
    <string name="date">Date</string>
    <string name="imamia_n_jantri">Imamia \n Jantri</string>
    <string name="logo">Logo</string>
    <string name="contin">Continue</string>
    <string name="login">Sign in</string>
    <string name="duas">Dua\'s</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="click_year_to_navigate_through_years">Click Year, to Navigate Through Years</string>
    <string name="no_account_yet">No Account Yet ?</string>
    <string name="or">OR</string>
    <string name="enter_your_mail">Enter your Mail</string>
    <string name="send">SEND</string>
    <string name="note">We will send code to your email address</string>
    <string name="verify">Verify</string>
    <string name="instructions">We just need your email to send you code.</string>
    <string name="confirmcode">We sent code to your email, Enter your code here to reset Password</string>
    <string name="enter_your_new_password">Enter Your new password</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="Update">Save Changes</string>
    <string name="edit">Edit</string>
    <string name="old_password">Enter Old Password</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_sub_cat_activity">subCat_activity</string>
    <string name="readmore">Read more...</string>
    <string name="readLess">Read Less</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="favourites">Favourites</string>
    <string name="dua_title">Dua Title</string>
    <string name="dua_description">Dua Description</string>
</resources>
