<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".UI.Activities.PrayerTimesCalendarView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/table1"
            tools:ignore="UselessParent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:background="@color/colorPrimary"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gregorian"
                    android:textSize="12sp"
                    android:layout_weight="12.5"
                    android:gravity="center"
                    android:padding="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hijri"
                    android:textSize="12sp"
                    android:layout_weight="12.5"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="12sp"
                    android:layout_weight="12.5"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fajr"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:layout_weight="12.5"
                    android:id="@+id/fajr"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dhuhr"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_weight="12.5"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asr"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_weight="12.5"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maghrib"
                    android:textSize="12sp"
                    android:layout_weight="12.5"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isha"
                    android:textSize="12sp"
                    android:layout_weight="12.5"
                    android:gravity="center"
                    />

            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>