<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp">


    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imamia_jantri_logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:id="@+id/logo_forg_pass"
        />

    <TextView
        android:id="@+id/forg_pas_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/forget_password"
        android:textColor="@android:color/black"
        android:layout_below="@+id/logo_forg_pass"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/instructions_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/instructions"
        android:textColor="@android:color/black"
        android:layout_below="@+id/forg_pas_tv"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/etRecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        tools:ignore="Autofill"
        android:layout_below="@+id/instructions_tv"
        android:textColor="@color/colorAccent"
        android:padding="10dp"
        />


    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_btn_bg"
        android:text="@string/send"
        android:textColor="@android:color/white" />

</RelativeLayout>