<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_compass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/twenty">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/_0"
        android:id="@+id/txt_azimuth"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/compass"
        android:layout_below="@+id/txt_azimuth"
        android:id="@+id/img_compass"
        android:contentDescription="@string/compass"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/compass_needle"
        android:layout_below="@+id/txt_azimuth"
        android:rotation="-155"
        android:id="@+id/img_compass_needle"
        android:contentDescription="@string/needle" />

</RelativeLayout>