<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.RecreatePassword"
    android:padding="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/enternewPass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_new_password"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/password_et_rec_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="Autofill"
            />

        <EditText
            android:id="@+id/c_Pass_et_rec_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:background="@drawable/edittext_bg"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/changepass_rec_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:background="@drawable/login_btn_bg"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        />

</RelativeLayout>